[package]
name = "twilight-select-menus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.28", features = ['macros', 'rt-multi-thread'] }
twilight-gateway = { path = '../twilight/twilight-gateway' }
twilight-http = { path = '../twilight/twilight-http' }
twilight-model = { path = '../twilight/twilight-model' }
